src/pages/Home/home.css
.home {
    font-family: 'Noto Sans', sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    text-align: center;
    align-items: center;

    color: var(--text-color);
    background: linear-gradient(to bottom, var(--grad-color-one), var(--grad-color-two), 100svh, var(--dark-color));
}

.home__title--introduction {
    font-size: 38px;
}

.home__title--span {
    font-size: 40px;
    font-weight: 800;
    background: -webkit-linear-gradient(180deg, #9cc6ff, #1c7eff);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.home__title--paragraph {
    font-size: 23px;
    margin-top: -20px;
}

.home__buttons--container {
    margin-top: 7svh;
}

.home__buttons--full {
    margin-right: 30px;
    color: var(--text-color);
    background: linear-gradient(to right, #2170ce, #0b51af);
    padding: 20px 30px;
    text-decoration: none;
    border-radius: 10px;
    font-weight: 600;
    font-size: 20px;
    box-shadow: rgba(72, 135, 202, 0.8) 0 0 90px 13px;
    transition: box-shadow 1s ease-in-out;
}

.home__buttons--full:hover {
    background: linear-gradient(to right, #0a4298, #072c67);
    box-shadow: rgba(72, 135, 202, 0.8) 0 0 80px 20px;
}

.home__buttons--full:active,
.home__buttons--semi:active {
    transform: scale(0.9);
}

.home__buttons--semi {
    margin-right: 30px;
    border: 3px solid #0b51af;
    color: #67a7fd;
    padding: 20px 30px;
    text-decoration: none;
    border-radius: 10px;
    font-weight: 600;
    font-size: 20px;
    transition: 500ms ease-in-out;
}

.home__buttons--semi:hover {
    border: 3px solid #0b3f88;
    color: #216ad2;
}

.divider {
    display: block;
    width: 100%;
    height: 1px;
    background-color: #ccc;
    margin-top: 0.5svh;
    margin-bottom: 4svh;
    opacity: 50%;
}

.home__memo--container {
    margin-top: -20px;
}

.home__memo--paragraph {
    font-size: 18px;
}

.home__memo--paragraph span {
    font-size: 20px;
    font-weight: 600;
}

.home__offers {
    margin-top: 8svh;
}

.home__offers--title {
    font-size: 30px;
    font-weight: 700;
}

.home__offers--description {
    font-size: 18px;
    margin-top: -1em;
}

.home__grid--container {
    width: 80%;
    height: 35rem;
    border: 3px solid #2170ce;
    background: rgba(28, 28, 28, 0.66);
    border-radius: 30px;
}

.home__grid--title {
    font-size: 25px;
    font-weight: 800;
    color: #8abfff;
}

.home__offers--grid {
    display: grid;
    grid-template-rows: repeat(3, auto);
    grid-template-columns: repeat(3, auto);
}

.grid__title--container {
    display: flex;
    flex-direction: row;
    margin-left: 11rem;
}

.grid__item--image {
    width: 30px;
    height: 32px;
    margin-top: 13px;
    margin-right: 10px;
}

.grid__item--title {
    font-weight: 600;
    font-size: 18px;
}

.grid__item--description {
    width: 300px;
    margin-left: 6.7rem;
    color: #a1a1a1;
    font-weight: 500;
}

.home__choose--container {
    display: flex;
    flex-direction: row;
}

.home__choose--total {
    margin-top: 3rem;
    margin-bottom: 2rem;
}

.home__choose--title {
    font-size: 30px;
    font-weight: 700;
}

.home__choose--grid {
    padding: 30px;
    margin-left: 40px;
    border: 3px solid #2170ce;
    background: rgba(28, 28, 28, 0.66);
    border-radius: 30px;
}

.home__choose--grid-title,
.home__choose--grid-title-two {
    display: flex;
    flex-direction: row;
    margin-left: 3rem;
}

.home__choose--grid-title-two {
    margin-left: 4.5rem;
}

.home__choose--grid-description {
    width: 300px;
    color: #a1a1a1;
    font-weight: 500;
}

.home__bottom--last {
    margin-top: 6em;
    font-size: 20px;
    font-weight: 600;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
}

@media screen and (max-width: 792px) {
    .home__grid--container {
        width: 80%;
        height: auto;
        margin-top: 30px;
        padding: 5px;
    }

    .home__offers--description,
    .home__memo--paragraph {
        width: 90%;
        margin-left: 20px;
    }

    .grid__item--description {
        width: 90%;
    }

    .home__offers--grid {
        display: flex !important;
        flex-direction: column !important;
    }

    .grid__title--container {
        margin-left: 1rem;
    }

    .grid__item--description {
        margin-left: 1rem;
        text-align: left;
    }

    .home__choose--container {
        flex-direction: column;
    }

    .home__choose--grid {
        margin-bottom: 3rem;
    }

    .home__bottom--last {
        width: 20em;
    }
}

@media screen and (max-width: 500px) {
    .home__buttons--container {
        display: flex;
        flex-direction: column;
        margin-left: 25px;
    }

    .home__buttons--full {
        margin-bottom: 30px;
    }

    .home__grid--container {
        width: 70%;
        height: auto;
        margin-top: 30px;
    }

    .home__offers--description,
    .home__memo--paragraph {
        width: 80%;
        margin-left: 40px;
    }

    .grid__item--description {
        width: 90%;
    }

    .home__offers--grid {
        display: flex !important;
        flex-direction: column !important;
    }

    .grid__title--container {
        margin-left: 1rem;
    }

    .grid__item--description {
        margin-left: 1rem;
        text-align: left;
    }

    .home__choose--container {
        flex-direction: column;
    }

    .home__choose--title {
        font-size: 25px;
    }

    .home__choose--grid {
        margin-bottom: 3rem;
        padding: 8px;
        margin-right: 30px;
    }

    .home__bottom--last {
        font-size: 18px;
        width: 17em;
    }
}

@media screen and (max-width: 1520px) {
    .home__grid--container {
        width: 80%;
        height: auto;
        padding: 20px;
    }

    .grid__title--container {
        margin-left: 1rem;
    }

    .grid__title--container {
        margin-left: 1rem;
    }

    .grid__item--description {
        margin-left: 1rem;
        text-align: left;
    }

    .home__bottom--last {
        width: 95%;
        margin-left: auto;
        margin-right: auto;
    }
}

@media screen and (max-width: 1165px) {
    .home__grid--container {
        width: 80%;
        height: auto;
        padding: 20px;
    }

    .home__offers--grid {
        display: grid;
        grid-template-rows: repeat(3, auto);
        grid-template-columns: repeat(2, auto);
    }

    .grid__title--container {
        margin-left: 1rem;
    }
}

@media screen and (max-width: 1220px) {
    .home__choose--container {
        flex-direction: column;
    }

    .home__choose--grid {
        margin-bottom: 3rem;
    }
}

